migrando projeto do desafio dois

--- a/Imc/wwwroot/index.html
+++ b/Imc/wwwroot/index.html
@@ -8,11 +8,15 @@
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="Imc.styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="icon.png" />
+    <link href="css/carnaCode.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <script defer src="js/fadeInFadeOutAnim.js"></script>
+    <script defer src="js/formsCheck.js"></script>
+    <script defer src="js/calculadoraIMC.js"></script>
+    <script defer src="js/historicoFlow.js"></script>
 </head>
 
 <body>
