--- a/Imc/wwwroot/index.html
+++ b/Imc/wwwroot/index.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <script defer src="js/fadeInFadeOutAnim.js"></script>
     <script defer src="js/formsCheck.js"></script>
-    <script defer src="js/calculadoraIMC.js"></script>
+    <script defer src="js/calcularImc.js"></script>
     <script defer src="js/historicoFlow.js"></script>
 </head>
 
